src/test/deca/context/invalid/affectation-wrongTypeAffectationBoolFloat.context
affectation-wrongTypeAffectationBoolFloat.deca:4: